--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Bootstrap Dashboard</title>
 
     <!--§ icon  -->
-    <link rel="icon" href="" type="img/ico">
+    <link rel="icon" href="img/Logo.png" type="img/png">
 
     <!--§ font-awesome -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css'
