--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="lower-content d-flex">
 
         <!--# LEFT SIDEBAR -->
-        <div class="left-sidebar d-flex flex-column justify-content-between align-items-center pt-4">
+        <div class="left-sidebar d-flex flex-column justify-content-between align-items-center  flex-shrink-0 pt-4">
 
             <!--| TOP SIDEBAR -->
             <div class="top-sidebar">
@@ -165,12 +165,179 @@
 
             <!--| MAIN CONTENT -->
             <div class="main-content">
+                <div class="container-fluid">
 
+                    <div class="row row-cols-1 row-cols-lg-2 g-4">
+
+                        <div class="col-12 col-lg-8 flex-grow-1">
+
+
+                            <!-- TABLE -->
+                            <div class="card my-4">
+                                <div class="card-header">
+                                    <h5 class="card-title">Prossime classi</h5>
+                                </div>
+                                <div class="card-body">
+                                    <table class="table table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">Nome</th>
+                                                <th scope="col" class="d-none d-md-table-cell">Data inizio</th>
+                                                <th scope="col" class="d-none d-sm-table-cell">ROI</th>
+                                                <th scope="col">Stato</th>
+                                                <th scope="col">Azioni</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <th scope="row">Classe 76</th>
+                                                <td class="d-none d-md-table-cell">11 Febbraio 2021</td>
+                                                <td class="d-none d-sm-table-cell">20%</td>
+                                                <td>done</td>
+                                                <td>+ +</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Classe 77</th>
+                                                <td class="d-none d-md-table-cell">11 Febbraio 2021</td>
+                                                <td class="d-none d-sm-table-cell">20%</td>
+                                                <td>done</td>
+                                                <td>+ +</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <div class="card my-4">
+                                <div class="card-header">
+                                    <h5 class="card-title">F.A.Q.</h5>
+                                </div>
+                                <div class="card-body">
+                                    <div class="accordion" id="accordionExample">
+                                        <div class="accordion-item">
+                                            <h2 class="accordion-header">
+                                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                                    data-bs-target="#collapseOne" aria-expanded="true"
+                                                    aria-controls="collapseOne">
+                                                    Accordion Item #1
+                                                </button>
+                                            </h2>
+                                            <div id="collapseOne" class="accordion-collapse collapse"
+                                                data-bs-parent="#accordionExample">
+                                                <div class="accordion-body">
+                                                    <strong>This is the first item's accordion body.</strong> It is
+                                                    shown by default, until the collapse plugin adds the appropriate
+                                                    classes that we use to style each element. These classes control
+                                                    the overall appearance, as well as the showing and hiding via
+                                                    CSS transitions. You can modify any of this with custom CSS or
+                                                    overriding our default variables. It's also worth noting that
+                                                    just about any HTML can go within the
+                                                    <code>.accordion-body</code>, though the transition does limit
+                                                    overflow.
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="accordion-item">
+                                            <h2 class="accordion-header">
+                                                <button class="accordion-button collapsed" type="button"
+                                                    data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                                    aria-expanded="false" aria-controls="collapseTwo">
+                                                    Accordion Item #2
+                                                </button>
+                                            </h2>
+                                            <div id="collapseTwo" class="accordion-collapse collapse"
+                                                data-bs-parent="#accordionExample">
+                                                <div class="accordion-body">
+                                                    <strong>This is the second item's accordion body.</strong> It is
+                                                    hidden by default, until the collapse plugin adds the
+                                                    appropriate classes that we use to style each element. These
+                                                    classes control the overall appearance, as well as the showing
+                                                    and hiding via CSS transitions. You can modify any of this with
+                                                    custom CSS or overriding our default variables. It's also worth
+                                                    noting that just about any HTML can go within the
+                                                    <code>.accordion-body</code>, though the transition does limit
+                                                    overflow.
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="accordion-item">
+                                            <h2 class="accordion-header">
+                                                <button class="accordion-button collapsed" type="button"
+                                                    data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                                    aria-expanded="false" aria-controls="collapseThree">
+                                                    Accordion Item #3
+                                                </button>
+                                            </h2>
+                                            <div id="collapseThree" class="accordion-collapse collapse"
+                                                data-bs-parent="#accordionExample">
+                                                <div class="accordion-body">
+                                                    <strong>This is the third item's accordion body.</strong> It is
+                                                    hidden by default, until the collapse plugin adds the
+                                                    appropriate classes that we use to style each element. These
+                                                    classes control the overall appearance, as well as the showing
+                                                    and hiding via CSS transitions. You can modify any of this with
+                                                    custom CSS or overriding our default variables. It's also worth
+                                                    noting that just about any HTML can go within the
+                                                    <code>.accordion-body</code>, though the transition does limit
+                                                    overflow.
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="col-12 col-lg-4">
+
+                            <div class="card my-4">
+                                <div class="card-header">
+                                    <h5 class="card-title">Todo</h5>
+                                </div>
+                                <div class="card-body">
+                                    <ul class="list-group list-group-flush border rounded-2">
+                                        <li class="list-group-item"><input type="checkbox">An item</li>
+                                        <li class="list-group-item"><input type="checkbox">A second item</li>
+                                        <li class="list-group-item"><input type="checkbox">A third item</li>
+                                    </ul>
+                                </div>
+
+                            </div>
+
+                            <div class="card my-4">
+                                <div class="card-body">
+                                    <div class="card-body border border-bottom-0 rounded-top-2">
+                                        <img src="img/stats.jpeg" class="card-img-top" id="stats" alt="stats">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">
+                                            Some quick example text to build on the card title and make
+                                            up
+                                            the bulk of the card's content.
+                                        </p>
+                                    </div>
+                                    <ul class="list-group list-group-flush border">
+                                        <li class="list-group-item">An item</li>
+                                        <li class="list-group-item">A second item</li>
+                                        <li class="list-group-item">A third item</li>
+                                    </ul>
+                                    <div class="card-footer border border-top-0">
+                                        <a href="#" class="card-link">Card link</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+
         </main>
 
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
