--- a/index.html
+++ b/index.html
@@ -36,44 +36,33 @@
                     <img src="img/logo.svg" id="big-logo" class="d-none d-lg-block" alt="logo boolean">
                 </div>
                 <div class="box-search flex-grow-1 mx-4 mx-lg-5">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2 flex-grow-1" type="search" placeholder="Search"
-                            aria-label="Search">
+                    <form role="search">
+                        <div class="input-group flex-nowrap">
+                            <span class="input-group-text border-0" id="addon-wrapping">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </span>
+                            <input type="search" class="form-control border-0 ps-0"
+                                placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search"
+                                aria-describedby="addon-wrapping">
+                        </div>
                     </form>
                 </div>
-                <div class="box-link flex-shrink-0">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Dropdown
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                            </li>
+                <div class="box-link flex-shrink-0 d-flex align-items-center gap-2">
+                    <div class="d-none d-lg-flex gap-3">
+                        <i class="fa-solid fa-list-ul"></i>
+                        <i class="fa-solid fa-circle-question"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                    <div class="dropdown">
+                        <button class="btn dropdown-toggle border-0 pe-0" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <i class="fa-solid fa-bell"></i>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Profilo</a></li>
+                            <li><a class="dropdown-item" href="#">Fatturazione</a></li>
+                            <li><a class="dropdown-item" href="#">Logout</a></li>
                         </ul>
-
                     </div>
                 </div>
 
@@ -86,7 +75,7 @@
     <div class="lower-content d-flex">
 
         <!--# LEFT SIDEBAR -->
-        <div class="left-sidebar d-flex flex-column justify-content-between align-items-center  flex-shrink-0 pt-4">
+        <div class="left-sidebar d-flex flex-column justify-content-between align-items-center flex-shrink-0 pt-4">
 
             <!--| TOP SIDEBAR -->
             <div class="top-sidebar">
@@ -131,10 +120,13 @@
             <!--| MAIN HEADER -->
             <header class="main-header text-white py-4">
                 <div class="container-fluid d-md-flex justify-content-between align-items-start">
+
+                    <!-- TOP MAIN HEADER -->
                     <div class="top-mhead order-md-1">
                         <a href="#">Nuovo studente<i class="fas fa-plus"></i></a>
                     </div>
 
+                    <!-- MIDDLE MAIN HEADER -->
                     <div class="mid-mhead py-4 py-md-0">
                         <div class="box-title d-flex align-items-center gap-2">
                             <h1>Boolean</h1>
@@ -152,33 +144,36 @@
                         </div>
                     </div>
 
-
+                    <!-- BOTTOM MAIN HEADER -->
                     <div class="bottom-mhead">
                         <p class="m-0">Studenti online negli ultimi 30 minuti</p>
                         <span class="counter">125</span>
                     </div>
 
-
                 </div>
-
             </header>
 
             <!--| MAIN CONTENT -->
             <div class="main-content">
                 <div class="container-fluid">
 
+                    <!--# ROW -->
                     <div class="row row-cols-1 row-cols-lg-2 g-4">
 
+                        <!--# LEFT COL -->
                         <div class="col-12 col-lg-8 flex-grow-1">
 
 
-                            <!-- TABLE -->
+                            <!--! TABLE -->
                             <div class="card my-4">
+                                <!-- CARD HEADER -->
                                 <div class="card-header">
                                     <h5 class="card-title">Prossime classi</h5>
                                 </div>
+                                <!-- CARD BODY -->
                                 <div class="card-body">
                                     <table class="table table-hover">
+                                        <!-- TABLE HEAD -->
                                         <thead>
                                             <tr>
                                                 <th scope="col">Nome</th>
@@ -188,6 +183,8 @@
                                                 <th scope="col">Azioni</th>
                                             </tr>
                                         </thead>
+
+                                        <!-- TABLE BODY -->
                                         <tbody>
                                             <tr>
                                                 <th scope="row">Classe 76</th>
@@ -208,10 +205,15 @@
                                 </div>
                             </div>
 
+                            <!--! ACCORDION -->
                             <div class="card my-4">
+
+                                <!-- CARD HEADER -->
                                 <div class="card-header">
                                     <h5 class="card-title">F.A.Q.</h5>
                                 </div>
+
+                                <!-- CARD BODY -->
                                 <div class="card-body">
                                     <div class="accordion" id="accordionExample">
                                         <div class="accordion-item">
@@ -289,12 +291,18 @@
 
                         </div>
 
+                        <!--# RIGHT COL -->
                         <div class="col-12 col-lg-4">
 
+                            <!--! CHECKBOX -->
                             <div class="card my-4">
+
+                                <!-- CARD HEADER -->
                                 <div class="card-header">
                                     <h5 class="card-title">Todo</h5>
                                 </div>
+
+                                <!-- CARD BODY -->
                                 <div class="card-body">
                                     <ul class="list-group list-group-flush border rounded-2">
                                         <li class="list-group-item"><input type="checkbox">An item</li>
@@ -302,12 +310,15 @@
                                         <li class="list-group-item"><input type="checkbox">A third item</li>
                                     </ul>
                                 </div>
-
                             </div>
 
+                            <!--! IMG INFO LINK -->
                             <div class="card my-4">
+
+                                <!-- CARD BODY -->
                                 <div class="card-body">
                                     <div class="card-body border border-bottom-0 rounded-top-2">
+
                                         <img src="img/stats.jpeg" class="card-img-top" id="stats" alt="stats">
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">
@@ -316,6 +327,7 @@
                                             the bulk of the card's content.
                                         </p>
                                     </div>
+
                                     <ul class="list-group list-group-flush border">
                                         <li class="list-group-item">An item</li>
                                         <li class="list-group-item">A second item</li>
