--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
 
     <!--* header -->
     <header class="page-header">
+
+        <!--# NAVBAR -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary h-100">
             <div class="container-fluid h-100">
+
+                <!--| LOGO -->
                 <div class="box-logo flex-shrink-0 ">
                     <img src="img/mobile-logo.png" id="small-logo" class="d-lg-none" alt="logo boolean mobile">
                     <img src="img/logo.svg" id="big-logo" class="d-none d-lg-block" alt="logo boolean">
                 </div>
+
+                <!--| SEARCH -->
                 <div class="box-search flex-grow-1 mx-4 mx-lg-5">
                     <form role="search">
                         <div class="input-group flex-nowrap">
@@ -47,23 +53,34 @@
                         </div>
                     </form>
                 </div>
-                <div class="box-link flex-shrink-0 d-flex align-items-center gap-2">
-                    <div class="d-none d-lg-flex gap-3">
-                        <i class="fa-solid fa-list-ul"></i>
-                        <i class="fa-solid fa-circle-question"></i>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
-                    </div>
-                    <div class="dropdown">
-                        <button class="btn dropdown-toggle border-0 pe-0" type="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            <i class="fa-solid fa-bell"></i>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Profilo</a></li>
-                            <li><a class="dropdown-item" href="#">Fatturazione</a></li>
-                            <li><a class="dropdown-item" href="#">Logout</a></li>
-                        </ul>
-                    </div>
+
+                <!--| LIST + DROPDOWN -->
+                <div class="box-link flex-shrink-0">
+
+                    <ul class="m-0 d-flex align-items-center gap-3">
+                        <li class="d-none d-lg-block">
+                            <i class="fa-solid fa-list-ul"></i>
+                        </li>
+                        <li class="d-none d-lg-block">
+                            <i class="fa-solid fa-circle-question"></i>
+                        </li>
+                        <li class="d-none d-lg-block">
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </li>
+                        <li>
+                            <div class="dropdown">
+                                <button class="btn dropdown-toggle border-0 p-0" type="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    <i class="fa-solid fa-bell"></i>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Profilo</a></li>
+                                    <li><a class="dropdown-item" href="#">Fatturazione</a></li>
+                                    <li><a class="dropdown-item" href="#">Logout</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
 
             </div>
@@ -118,12 +135,49 @@
         <main class="flex-grow-1 overflow-y-auto">
 
             <!--| MAIN HEADER -->
-            <header class="main-header text-white py-4">
-                <div class="container-fluid d-md-flex justify-content-between align-items-start">
+            <header class="main-header text-white  py-4">
+                <div class="container-fluid d-md-flex justify-content-between align-items-start gap-5">
 
                     <!-- TOP MAIN HEADER -->
                     <div class="top-mhead order-md-1">
-                        <a href="#">Nuovo studente<i class="fas fa-plus"></i></a>
+
+                        <!-- OFFCANVAS LINK -->
+                        <a class="me-3" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                            aria-controls="offcanvasExample">
+                            Nuovo studente
+                        </a>
+
+                        <!-- OFFCANVAS BUTTON -->
+                        <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                            <i class="fas fa-plus"></i>
+                        </button>
+
+                        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
+                            aria-labelledby="offcanvasExampleLabel">
+                            <div class="offcanvas-header">
+                                <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body">
+                                <div>
+                                    Some text as placeholder. In real life you can have the elements you have chosen.
+                                    Like, text, images, lists, etc.
+                                </div>
+                                <div class="dropdown mt-3">
+                                    <button class="btn btn-secondary dropdown-toggle" type="button"
+                                        data-bs-toggle="dropdown">
+                                        Dropdown button
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- MIDDLE MAIN HEADER -->
