--- a/index.html
+++ b/index.html
@@ -156,12 +156,104 @@
                         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample"
                             aria-labelledby="offcanvasExampleLabel">
                             <div class="offcanvas-header">
-                                <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+                                <h5 class="offcanvas-title" id="offcanvasExampleLabel">Inserisci nuovo studente</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                     aria-label="Close"></button>
                             </div>
                             <div class="offcanvas-body">
-                                <form action="GET">
+                                <form action="https://marcolanci.it/boolean/read_form.php">
+                                    <div class="container-fluid">
+
+
+                                        <div class="row">
+                                            <div class="col-12 col-md-6">
+                                                <div class="mb-3">
+                                                    <label for="nome" class="form-label">Nome</label>
+                                                    <input type="text" class="form-control" id="nome" required>
+                                                </div>
+                                            </div>
+                                            <div class="col-12 col-md-6">
+                                                <div class="mb-3">
+                                                    <label for="cognome" class="form-label">Cognome</label>
+                                                    <input type="text" class="form-control" id="cognome" required>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-12 col-md-6">
+                                                <div class="mb-3">
+                                                    <label for="email" class="form-label">Email</label>
+                                                    <div class="input-group">
+                                                        <span class="input-group-text" id="basic-addon1">@</span>
+                                                        <input type="email" class="form-control" id="email" required>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-12 col-md-6">
+                                                <div class="mb-3">
+                                                    <label for="password" class="form-label">Password</label>
+                                                    <input type="password" id="password" class="form-control" required>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-12">
+                                                <div class="mb-3">
+                                                    <label for="adress" class="form-label">Indirizzo</label>
+                                                    <input type="text" class="form-control" id="adress" required>
+                                                </div>
+                                            </div>
+
+
+                                            <div class="col-12 col-md-6">
+                                                <div class="mb-3">
+                                                    <label for="city" class="form-label">Città</label>
+                                                    <input type="text" class="form-control" id="city" required>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-12 col-md-4">
+                                                <div class="mb-3">
+                                                    <label for="country" class="form-label">Stato</label>
+                                                    <select class="form-select" id="country">
+                                                        <option selected>Scegli...</option>
+                                                        <option value=" 1">Italia</option>
+                                                        <option value="2">Spagna</option>
+                                                        <option value="3">Inghilterra</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-12 col-md-2">
+                                                <div class="mb-3">
+                                                    <label for="CAP" class="form-label">CAP</label>
+                                                    <input type="text" class="form-control" id="CAP" required>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-12">
+                                                <div class="mb-3">
+                                                    <label for="formFile" class="form-label">Foto</label>
+                                                    <input class="form-control" type="file" id="formFile" required>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-12">
+                                                <div class="form-check mb-3">
+                                                    <input class="form-check-input" type="checkbox" value=""
+                                                        id="flexCheckDefault" required>
+                                                    <label class="form-check-label" for="flexCheckDefault">
+                                                        Seleziona per proseguire
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="mb-3">
+                                                    <button class="btn btn-primary" type="submit">Salva</button>
+                                                    <button class="btn btn-warning" type="reset">Svuota</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
 
                                 </form>
                             </div>
