--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
             <!--| TOP SIDEBAR -->
             <div class="top-sidebar">
                 <ul class="p-0 text-center">
-                    <li class="mb-3">
-                        <a href="#">
+                    <li class="p-2">
+                        <a href="#" class="ps-1">
                             <i class="fas fa-house fa-lg me-3"></i>
                             <span class="d-none d-lg-inline">Home</span>
                         </a>
                     </li>
-                    <li class="mb-3">
+                    <li class="p-2">
                         <a href="#">
                             <i class="fas fa-chart-simple fa-xl me-3"></i>
                             <span class="d-none d-lg-inline">Stats</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="p-2">
                         <a href="#">
                             <i class="fas fa-signal fa-lg me-3"></i>
                             <span class="d-none d-lg-inline">Signal</span>
@@ -121,7 +121,7 @@
             <!--| BOTTOM SIDEBAR -->
             <div class="bottom-sidebar pb-4">
                 <ul class="m-0 p-0 text-center">
-                    <li>
+                    <li class="p-2">
                         <a href="#">
                             <i class="fas fa-gear fa-lg me-3"></i>
                             <span class="d-none d-lg-inline">Admin</span>
