--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@
             <div class="top-sidebar">
                 <ul class="p-0 text-center">
                     <li class="p-2">
-                        <a href="#" class="ps-1">
+                        <a href="#" class="p-2">
                             <i class="fas fa-house fa-lg me-3"></i>
                             <span class="d-none d-lg-inline">Home</span>
                         </a>
                     </li>
                     <li class="p-2">
-                        <a href="#">
+                        <a href="#" class="p-2">
                             <i class="fas fa-chart-simple fa-xl me-3"></i>
                             <span class="d-none d-lg-inline">Stats</span>
                         </a>
                     </li>
                     <li class="p-2">
-                        <a href="#">
+                        <a href="#" class="p-2">
                             <i class="fas fa-signal fa-lg me-3"></i>
                             <span class="d-none d-lg-inline">Signal</span>
                         </a>
@@ -122,7 +122,7 @@
             <div class="bottom-sidebar pb-4">
                 <ul class="m-0 p-0 text-center">
                     <li class="p-2">
-                        <a href="#">
+                        <a href="#" class="p-2">
                             <i class="fas fa-gear fa-lg me-3"></i>
                             <span class="d-none d-lg-inline">Admin</span>
                         </a>
@@ -292,7 +292,7 @@
                 <div class="container-fluid">
 
                     <!--# ROW -->
-                    <div class="row row-cols-1 row-cols-lg-2 g-4">
+                    <div class="row g-4">
 
                         <!--# LEFT COL -->
                         <div class="col-12 col-lg-8 flex-grow-1">
